
name:               lilypond
version:            1.1
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           Bindings to Lilypond
category:           Music
tested-with:        GHC
build-type:         Simple

description:
    This package contains a terse Haskell representation of (a subset of) Lilypond
    expressions and a pretty-printer for such expressions. They can be used to generate
    musical notation.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/lilypond.git


library
    build-depends:
          base            >= 4 && < 5
        , semigroups
        , prettify
        , vector-space
        , process
        , data-default
        , music-pitch-literal
--      , music-dynamics-literal -- remove this guy's unix dependency
        , nats
        , directory            
    hs-source-dirs: src
    default-language:   Haskell2010
    exposed-modules:
        Music.Lilypond
        Music.Lilypond.Pitch
        Music.Lilypond.Dynamics
        Music.Lilypond.Value
        Music.Lilypond.IO

executable tears
  default-language:   Haskell2010
  hs-source-dirs:   tears
  main-is:          Main.hs
  other-modules:
    Music.Lilypond.Tears
  build-depends:
      base >= 4 && <= 5
    , lilypond
    , parsec3-numbers
    , optparse-applicative
    , mtl
    , containers
    , nats
    , parsec >= 3
    , vector-space
